upgrades for titan 0.5.1